feat(navbar): add Navbar

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,7 +12,7 @@
 #navbar h1{
     margin-left: 5%;
     margin-right: 55%;
-    color: aliceblue;
+    color: rgb(233, 235, 236);
 }
 
 .nav-itens{
