--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 }
 
 *{
-  font-family: 'FjallaOne';
+  font-family: sans-serif;
 }
 
 #root {
@@ -23,7 +23,7 @@
   margin: auto;
   width: 100%;
   margin-top: 0px;
-  padding-top: 42px;
+  padding-top: 50px;
 }
 
 
