--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,12 +2,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
 
-.about {
+#about {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
-  color: #f8f8f8;
-  background-color:  #444;
+  color: var(--cinzaescuro);
+  background-color: var(--cinzaclaro);
   line-height: 1.5;
+  border-top-style: solid;
+  border-color: var(--azul);
+  padding-top: 10px;
+}
+
+.about-me{
+  display: flex;
+  justify-content: center;
+}
+
+.img-about img{
+  max-width: 600px;
+}
+
+.about-description{
+  max-width: 660px;
+  margin-top: 30px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -83,9 +100,14 @@ h1 span, h2:before, h2:after, li:before {
 }
 
 
-
 li:before {
   content: "\2713"; /* emoji para marcação */
   margin-right: 0.25rem;
   color: #0c0;
+}
+
+li:before {
+  content: "\2192"; /* emoji para curso em andamento */
+  margin-right: 0.25rem;
+  color: #FFA500; /* cor laranja para indicar curso em andamento */
 }
