--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 #navbar{
-    background-color: var(--navbar);
+    background-color: var(--azul);
     display: flex;
     align-items: center;
     position: fixed;
@@ -10,9 +10,10 @@
 }
 
 #navbar h1{
+    margin-top: 12px;
     margin-left: 5%;
     margin-right: 55%;
-    color: rgb(233, 235, 236);
+    color: var(--cinzaescuro);
 }
 
 .nav-itens{
@@ -21,7 +22,7 @@
 
 .navbar a{
     padding: 10px;
-    color: var(--navitens);
+    color: var(--cinzaescuro);
     text-decoration: none;
     font-family: "FjallaOne";
     font-size: 1.5em;
@@ -30,8 +31,8 @@
 }
 
 .navbar a:hover{
-    color: #ffff;
-    background-color: var(--musgo);
+    color: var(--cinzaescuro);
+    background-color: var(--azulsec);
 }
 
 .navbar a:active{
