--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,19 +4,25 @@
     background-color: var(--cinzaclaro);
     color: var(--cinzaescuro);
     padding-bottom: 70px;
+    background-image: url(../../assets/img/fundo-home2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 
 }
 
 .profile-photo img{
     max-width: 250px;
     border-radius: 15%;
+   
 }
 
 .brief-about{
     max-width: 900px;
     text-align: justify;
-    margin-right: 60px;
-    margin-top: 100px;
+    margin-right: 93px;
+    
+    margin-top: 50px;
     
 }
 
