--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -57,3 +57,78 @@
     line-height: 1.3;
     color: var(--cinzam);
 }
+
+.icons{
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+    font-size: 2em;
+}
+
+.linkedin{
+    color: #0A66C2;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.linkedin:hover{
+    transform: scale(1.5);
+}
+
+.github{
+    color: #24292F;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.github:hover{
+    transform: scale(1.5);
+}
+
+.whatsapp{
+    color: #25D366;
+    cursor: pointer;
+}
+
+.whatsapp:hover{
+    transform: scale(1.5);
+}
+
+
+@media only screen and (max-width: 1145px) {
+    .home{
+        flex-direction: column-reverse;
+    }
+
+    .brief-about{
+        margin: auto;
+        margin-left: 30px;
+        margin-right: 30px;
+        
+    }
+    .brief-description{
+        margin: auto;
+        margin-left: 30px;
+        margin-right: 30px;
+        
+    }
+
+    .brief-description p{
+        font-size: 1em;
+        text-align: center;
+    }
+
+    .helo{
+        font-size: 1.3em;
+        margin-top: 30px !important;
+    }
+
+    .myname{
+        font-size: 3em;
+    }
+
+    .profile-photo{
+        max-width: 250px;
+        margin: auto;
+    }
+}
