--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -24,8 +24,10 @@
 
 .about-description {
   max-width: 660px;
-  margin-top: 20px;
+  margin-top: 10px;
   margin-right: 30px;
+  margin-left: 30px;
+  margin-bottom: 30px;
 }
 
 .about-description p{
@@ -53,6 +55,8 @@
 #experience{
   display: flex;
   justify-content: center;
+  padding-top: 60px;
+  margin-left: 30px;
 }
 
 .experience{
@@ -60,48 +64,15 @@
   margin-top: 6%;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 700;
-  margin-bottom: 1rem;
-}
 
-a {
-  color: #06c;
-  text-decoration: none;
-}
 
-a:hover {
-  text-decoration: underline;
-}
+
 
 ul {
   list-style: none;
 }
 
-/* Estilos específicos para a página */
-header {
-  padding: 1rem;
-  background-color: #fff;
-  border-bottom: 1px solid #ccc;
-  text-align: center;
-}
 
-main {
-  max-width: 800px;
-  margin: 2rem auto;
-  padding: 2rem;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-main section {
-  margin-bottom: 2rem;
-}
 
 h1 {
   font-size: 2rem;
@@ -113,9 +84,7 @@ p {
   margin-bottom: 1rem;
 }
 
-p:last-child {
-  margin-bottom: 0;
-}
+
 
 span {
   font-weight: 700;
@@ -126,11 +95,6 @@ section h2 {
   margin-bottom: 1rem;
 }
 
-ul li {
-  margin-bottom: 0.5rem;
-}
-
-/* Estilos específicos para emojis */
 h1 span,
 h2:before,
 h2:after,
@@ -143,15 +107,47 @@ li:before {
 
 li:before {
   content: "\2713";
-  /* emoji para marcação */
   margin-right: 0.25rem;
   color: #0c0;
 }
 
-li:before {
-  content: "\2192";
-  /* emoji para curso em andamento */
-  margin-right: 0.25rem;
-  color: #FFA500;
-  /* cor laranja para indicar curso em andamento */
+
+@media only screen and (max-width: 1145px) {
+  .about-me{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .courses{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+  }
+
+  .info-courses{
+    margin: auto;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  #experience{
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+  }
+
+  .experience{
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .img-about{
+    width: 100%;
+    height: 100%;
+  }
+
+  .img-about img{
+    width: 100%;
+  }
 }
