--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,4 @@
-#footer{
+#footer {
   margin-top: 60px;
 }
 
@@ -9,8 +9,31 @@
   height: 100%;
 }
 
-.footer-info{
+.footer-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   min-height: 100px;
   background-color: var(--azul);
   margin-top: -4px;
+
+}
+
+.footer-info p {
+  margin-left: 30px;
+  position: relative;
+  bottom: -40px;
+  margin: 0;
+  margin-left: 20px;
+}
+
+.footer-info .icons{
+  margin: 0;
+  margin-left: 5%;
+}
+
+@media only screen and (max-width: 1145px) {
+  .footer-info{
+    margin-top: -5px;
+  }
 }
