--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -40,7 +40,7 @@
   border-color: var(--azul);
   padding-top: 20px;
   height: 462px;
-  background-image: url(../../assets/img/fundo-about1.png);
+  background-image: url(../../assets/img/fundo-about1.svg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
